understanding time complexity of palindromic partition